--- a/筆記/第4,5,6,7,8集-類神經網路訓練不起來怎麼辦.md
+++ b/筆記/第4,5,6,7,8集-類神經網路訓練不起來怎麼辦.md
@@ -29,7 +29,7 @@ Critical Point 是梯度（gradient）為 0 的點
 >$L(θ)$在L(θ′)附近可以用下面的表示寫出來
 
 
-![](https://i.imgur.com/ejiy56O.png)
+![image](https://github.com/ShangZheTsai/NTU-Deep-Learning/assets/107501046/dc064c4d-9cf6-43dd-9c61-989b18661629)
 
 
 - 第一項中，$L(\theta')$，當 $\theta$ 跟 $\theta'$ 很近的时候，$L$ 很靠近
